--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- footer section -->
 	  <footer class="footer">
          <p>Junin Buenos Aires</p>
-         <img src="Images/logo22.jpg" style="width: 40px"> 
+         <img src="Images/Logo22.jpg" style="width: 40px"> 
 
 	  </footer>
 
